<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBG"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.egco428.mupts.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical"
            android:id="@+id/camLogoLinearLayout"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cameraLogo"
                android:src="@drawable/camlogo"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:maxWidth="60dp"
                android:maxHeight="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/description"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:id="@+id/usernameLinearLayout"
        android:layout_below="@id/camLogoLinearLayout"
        android:background="@android:color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/usernameEditText"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:hint="@string/usernamehint"
            android:textSize="19sp"
            android:elevation="4dp"
            android:paddingStart="12dp"
            android:paddingEnd="5dp"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:id="@+id/passwordLinearLayout"
        android:layout_below="@id/usernameLinearLayout"
        android:background="@android:color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:hint="@string/passwordhint"
            android:textSize="19sp"
            android:elevation="4dp"
            android:paddingStart="12dp"
            android:paddingEnd="5dp"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="vertical"
        android:id="@+id/loginBtnLinearLayout"
        android:layout_marginTop="35dp"
        android:layout_below="@id/passwordLinearLayout"
        android:elevation="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/loginButton"
            android:elevation="5dp"
            android:text="@string/loginbutton"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:background="@drawable/login_button"
            android:onClick="checkLogin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="vertical"
        android:id="@+id/signupLinearLayout"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupText"
            android:text="@string/signuptext"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:elevation="5dp"
            android:onClick="toSignUp"/>
    </LinearLayout>

</RelativeLayout>
